# bevy_app_compute

./: Cargo.toml  README.md
examples/: boids.rs  multi_pass.rs
src/: lib.rs  pipeline_cache.rs  worker.rs  worker_builder.rs
