[package]
name = "bevy_app_compute"
version = "0.13.0"
authors = ["Kjolnyr <kjolnyr@protonmail.com>"]
edition = "2021"
description = "App compute plugin for Bevy"
repository = "https://github.com/Kjolnyr/bevy_app_compute"
homepage = "https://github.com/Kjolnyr/bevy_app_compute"
documentation = "https://docs.rs/bevy_app_compute"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]


[dependencies]
bevy = { version = "0.14.0-rc.4", features = [
    "bevy_asset",         # Assets management
    "bevy_scene",         # Scenes management
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_pbr",
    "wgpu_trace",
    "tonemapping_luts",
] }
parking_lot = "0.12.3"
bytemuck = "1.16.0"
naga = { version = "0.20.0", features = ["wgsl-in"] }
naga_oil = { version = "0.14.*", default-features = false }
wgpu = { version = "0.20.1", features = ["naga"] }

[dev-dependencies]
rand = "0.8.5"
bevy = { version = "0.14.0-rc.4", features = ["wayland"] }

[[example]]
name = "simple"

[[example]]
name = "multi_pass"

[[example]]
name = "one_shot"

[[example]]
name = "boids"
